@@ -3,7 +3,7 @@
     o   New Rcpp-FAQ examples on using the plugin maker for inline's
         cxxfunction(), and on setting row and column names for matrices
         
-    o   New sugar functions: mean, var
+    o   New sugar functions: mean, var, sd
 
 0.9.4   2011-04-12
 
